objects/CMPL123__SAML_Request__c.object
<CustomObject>
    <description>Used to store SAML Request during Federated SSO in 123 workflow e-signature functionalities.</description>
    <fields>
        <fullName>CMPL123__Expiration_Time__c</fullName>
        <label>Expiration Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Extended_Relay_State__c</fullName>
        <description>Relay state is defined by the SAML specification and is optional extra information that may be sent along with a SAML message.</description>
        <label>Extended Relay State</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Federation_Id__c</fullName>
        <label>Federation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active</description>
        <inlineHelpText>Is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>SAML Requests</relationshipLabel>
        <relationshipName>SAML_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Relay_State__c</fullName>
        <label>Relay State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Request_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123__SAML_Response_Time__c</fullName>
        <description>SAML Response Time</description>
        <inlineHelpText>SAML Response Time</inlineHelpText>
        <label>SAML Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__SAML_Validation_Failed_Reason__c</fullName>
        <description>SAML Validation Failed Reason</description>
        <inlineHelpText>SAML Validation Failed Reason</inlineHelpText>
        <label>SAML Validation Failed Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__SAML_Validation_Status__c</fullName>
        <description>SAML Validation Status</description>
        <inlineHelpText>SAML Validation Status</inlineHelpText>
        <label>SAML Validation Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__SSO_Config_Name__c</fullName>
        <description>SSO Config Name</description>
        <inlineHelpText>SSO Config Name</inlineHelpText>
        <label>SSO Config Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAML Request</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAML Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>